# lending-portfolio-risk-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dbt/lending_club/: .user.yml  dbt_project.yml  profiles.yml
dbt/lending_club/models/core/: fct_loans.sql
dbt/lending_club/models/mart/: mart_loan_risk.sql
dbt/lending_club/models/staging/: schema.yml  sources.yml  stg_loans.sql
kestra/: docker-compose.yml
kestra/flows/: 01_setup_kv_store.yaml  02_ingest_lending_club.yaml  03_run_dbt.yaml
scripts/: generate_architecture_diagram.py
spark/: credit_risk_analysis.py
streaming/: Dockerfile.flink  consumer_delinquency.py  docker-compose.yml  producer_loans.py
streaming/src/job/: q4_tumbling_grade.py  q5_session_window.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
